bk_ida/gobmkida/g2/print_top_moves
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/print_top_moves/src/engine/value_moves.c:3128:12: error: expected expression
*( _OWORD *)best_moves = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/print_top_moves/src/engine/value_moves.c:3128:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)best_moves = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/print_top_moves/src/engine/value_moves.c:3129:12: error: expected expression
*( _OWORD *)&best_moves[4] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/print_top_moves/src/engine/value_moves.c:3129:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_moves[4] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/print_top_moves/src/engine/value_moves.c:3130:12: error: expected expression
*( _OWORD *)best_move_values = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/print_top_moves/src/engine/value_moves.c:3130:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)best_move_values = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/print_top_moves/src/engine/value_moves.c:3131:12: error: expected expression
*( _OWORD *)&best_move_values[4] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/print_top_moves/src/engine/value_moves.c:3131:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_move_values[4] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/print_top_moves/src/engine/value_moves.c:3138:38: error: too many arguments to function call, expected 2, have 3
record_top_move( v3, *( float *)&v1, *( float *)&v0); 
~~~~~~~~~~~~~~~                      ^~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/print_top_moves/src/engine/liberty.h:456:1: note: 'record_top_move' declared here
void record_top_move(int move, float val);
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/print_top_moves/src/engine/value_moves.c:3150:18: error: use of undeclared identifier 'dword_A1105C'
v5 = *( float *)&dword_A1105C[v4]; 
                 ^
10 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/print_top_moves/src/obj/1/value_moves.o] Error 1
